--- a/jogo.html
+++ b/jogo.html
@@ -8,20 +8,21 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
         integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 </head>
 
 <body>
+   
     <h1>🌍 Jogo da Memória - Reciclagem ♻️</h1>
-
     <div class="legenda">
-
         <div class="button voltar">
-            <a onclick="goToMenu()"><i class="fa-solid fa-chevron-left"></i></a> <!-- Novo botão de Voltar para o Menu -->
+            <a onclick="goToMenu()"><i class="fa-solid fa-chevron-left"></i></a>
         </div>
-
+        
         <h3>Cores das Lixeiras:</h3>
         <ul>
             <li><span style="color: #4CAF50;">●</span> Verde - Vidro</li>
@@ -42,7 +43,8 @@
     <div class="button">
         <a onclick="resetGame()">Novo Jogo</a>
     </div>
-    <!-- Modal para nome do jogador -->
+
+
     <div id="nameModal" class="modal">
         <div class="modal-content">
             <h2>Parabéns!</h2>
@@ -54,7 +56,15 @@
         </div>
     </div>
 
+<audio id="backgroundMusic" loop>
+    <source src="assests/som/SomFundoGame.mp3" type="audio/mpeg">
+</audio>
+
+
+
     <script src="js/script_jogo.js"></script>
+
+  
 </body>
 
 </html>
