--- a/jogo.html
+++ b/jogo.html
@@ -51,7 +51,9 @@
             <p>A sua pontuação foi de <span id="finalScore"></span> pontos!</p>
             <form id="nameForm">
                 <input type="text" id="playerName" placeholder="Seu nome" required>
-                <button type="submit">Salvar Pontuação</button>
+                <div class="button">
+                    <a type="submit">Salvar Pontuação</a>
+                </div>
             </form>
         </div>
     </div>
