Fix: Ajuste da tela de ranking

--- a/jogo.html
+++ b/jogo.html
@@ -45,18 +45,16 @@
     </div>
 
 
-    <div id="nameModal" class="modal">
-        <div class="modal-content">
-            <h2>Parabéns!</h2>
-            <p>A sua pontuação foi de <span id="finalScore"></span> pontos!</p>
-            <form id="nameForm">
-                <input type="text" id="playerName" placeholder="Seu nome" required>
-                <div class="button">
-                    <a type="submit">Salvar Pontuação</a>
-                </div>
-            </form>
-        </div>
+<div id="nameModal" class="modal">
+    <div class="modal-content">
+        <h2>Parabéns!</h2>
+        <p>A sua pontuação foi de <span id="finalScore"></span> pontos!</p>
+        <form id="nameForm">
+            <input type="text" id="playerName" placeholder="Seu nome" required>
+            <button type="submit" class="button">Salvar Pontuação</button>
+        </form>
     </div>
+</div>
 
 <audio id="backgroundMusic" loop>
     <source src="assests/som/SomFundoGame.mp3" type="audio/mpeg">
